Develop/public/css/styles.css
.center-card {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh; /* Set height to fill the viewport */
}

.with-background {
  background-image: url("/images/desk.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 100vh;
  margin: 0;
}

.apply-background {
  background-color: rgba(
    255,
    255,
    255,
    0.9
  ); /* Slightly transparent white background */
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  max-width: 600px;
  margin: 50px auto;
}

